Add missing import

--- a/sagemaker_fridays/s03e04/04 - End to end workflow.ipynb
+++ b/sagemaker_fridays/s03e04/04 - End to end workflow.ipynb
@@ -327,6 +327,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sagemaker.model import Model\n",
+    "\n",
     "model = Model(\n",
     "    image_uri=container,\n",
     "    model_data=step_train.properties.ModelArtifacts.S3ModelArtifacts,\n",
